kubernetes/pft-be-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pft-be-auth-svc
  namespace: pft-be-auth
  labels:
    app: pft-be-auth
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http-5000  # Updated port name
      port: 8000
      targetPort: 8000
  selector:
    app: pft-be-auth
