kubernetes/pft-be-auth/ingress.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: pft-be-auths-ing-mdw
#   namespace: pft-be-auths
#   labels:
#     app: pft-be-auths
# spec:
#   replacePathRegex:
#     regex: ^/apis/pft-be-auths/(.*)
#     replacement: /v1/$1
---
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:
  name: pft-be-auth-ing
  namespace: pft-be-auth
  labels:
    app: pft-be-auth
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/preserve-host: "true"
    traefik.ingress.kubernetes.io/forwarded-headers: "X-Forwarded-For"
    traefik.ingress.kubernetes.io/use-forwarded-headers: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: pft-be-auths-pft-be-auths-ing-mdw@kubernetescrd  # Corrected middleware reference
spec:
  rules:
  - host: "<hostname>"
    http:
      paths:
      - pathType: Prefix  # Added pathType
        path: /auth
        backend:
          service:
            name: pft-be-auth-svc
            port:
              number: 8000  # Changed servicePort to number
      - pathType: Prefix  # Added pathType
        path: /
        backend:
          service:
            name: pft-be-auth-svc
            port:
              number: 8000  # Changed servicePort to number
